# DirectX12

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cmake/: CompilerWarnings.cmake  FindD3D12.cmake  SourcesAndHeaders.cmake  StandardSettings.cmake
include/core/: AppInitializer.h  version.hpp
include/core/common/: DDSTextureLoader.h  GameTimer.h  MathHelper.h  d3dApp.h  d3dUtil.h  d3dx12.h
src/: main.cpp
src/core/: AppInitializer.cpp  tmp.cpp
src/core/common/: DDSTextureLoader.cpp  GameTimer.cpp  MathHelper.cpp  d3dApp.cpp  d3dUtil.cpp
test/: CMakeLists.txt
test/src/core/: tmp_test.cpp
